# Megaprocessor-ASM-Android

./: .gitignore  6a3353b9.md  CHANGELOG.md  Mega.txt  README.md  example_asm_files.txt  megaprocessor_1770938274751.lst  opcodes.hex  opcodes.lst  settings.gradle
.github/: pull_request_template.md
.github/workflows/: release-debug-apk.yml  verify-hex-equivalence.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Megaprocessor_defs.asm  example.asm
app/src/main/cpp/: CMakeLists.txt  (+5 more)
docs/verification/: final-report.md  megaprocessor-traceability.md
docs/verification/artifacts/: microcases-results.json  tic_tac_toe_2.generated.hex
gradle/wrapper/: gradle-wrapper.properties
linux_cpp_compiled_outputs/: Megaprocessor_defs.lst.diff  REPORT.md  VERSION.txt  life.lst.diff  opcodes.lst.diff  snail.lst.diff  tetris.lst.diff  tic_tac_toe_2.lst.diff
linux_cpp_compiled_outputs/reference/: Megaprocessor_defs.lst  life.lst  snail.hex  snail.lst  tetris.hex  tetris.lst  tic_tac_toe_2.lst
scripts/: generate_linux_compiled_outputs.sh  setup-android-sdk.sh  verify_hex_and_prepare_apk.sh  verify_hex_equivalence.sh
tests/: assembler_cli.cpp  verify_opcode_matrix.py
tools/assembler-cli/: CMakeLists.txt  main.cpp
verification/: README.md  results.md  run_cases.sh
verification/cases/asm/: alu.asm  branches.asm  directives.asm  jumps.asm  ldst.asm  opcodes.asm
verification/cases/expected/: alu.hex  branches.hex  directives.hex  jumps.hex  ldst.hex  opcodes.hex
verification/tools/: assemble_cli.cpp
verification/tools/android/: log.h
(+19 files in other folders)
